objects/CLT_SearchFieldMapping__mdt.object
<CustomObject>
    <label>CLT_SearchFieldMapping</label>
    <pluralLabel>CLT_SearchFieldMapping</pluralLabel>
    <fields>
        <fullName>IsNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsNumber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                    <default>true</default>
                    <label>=</label>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ParamName__c</fullName>
        <label>ParamName</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Fields__c</fullName>
        <label>SF Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ObjectName__c</fullName>
        <label>Object Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Fields_List__c</fullName>
        <label>List SF Fields</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>